sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/of_marketing_discount_paid_by_Mx__c.field-meta.xml
<CustomField>
    <fullName>of_marketing_discount_paid_by_Mx__c</fullName>
    <description>LEM-13482: It is used to capture the Percentage of Consumer Discount paid by Mx for a corresponding product in the magic wand (drawer) on the QLE screen.</description>
    <label>% of consumer discount paid by Mx</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>