sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/of_Marketing_indicator__c.field-meta.xml
<CustomField>
    <fullName>of_Marketing_indicator__c</fullName>
    <description>LEM-13986: It is used to capture the value based on the percentage of consumer discount paid by Mx in the magic wand (drawer) on the QLE screen.</description>
    <formula>IF(
    AND(
        SBQQ__Existing__c = false,
        OR(
            ISNULL(of_marketing_discount_paid_by_Mx__c),
            of_marketing_discount_paid_by_Mx__c= 1
        )
    ),
    0,1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Marketing indicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>