sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Offer_title__c.field-meta.xml
<CustomField>
    <fullName>Offer_title__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products</description>
    <label>Offer title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>