sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Offsite_Banner_Type__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Banner_Type__c</fullName>
    <description>LEM-17589: Quote Line Fields for Offsite Ad Product</description>
    <inlineHelpText>This field is only applicable if you&apos;ve selected Display at the Offsite Platform.</inlineHelpText>
    <label>Offsite Banner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Offsite_Banner_Type</valueSetName>
    </valueSet>
</CustomField>