sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Offsite_Platform__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Platform__c</fullName>
    <description>LEM-17589: Quote Line Fields for Offsite Ad Product</description>
    <inlineHelpText>Select the offsite platform where the offsite ad will be run.</inlineHelpText>
    <label>Offsite Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Offsite_Platform</valueSetName>
    </valueSet>
</CustomField>