sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Organic_Social_Media_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Organic_Social_Media_Commitment__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products</description>
    <label>Organic Social Media Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>