sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Original_Commission__c.field-meta.xml
<CustomField>
    <fullName>Original_Commission__c</fullName>
    <description>LEM-180 – Initial Setup of Quote Line – Quote Line Pricing</description>
    <label>List Commission</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>