sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Other_Occasion__c.field-meta.xml
<CustomField>
    <fullName>Other_Occasion__c</fullName>
    <description>LEM-13256 - DPEI Quote Line Attributes</description>
    <inlineHelpText>Please fill this when Occasion is ‘Other’</inlineHelpText>
    <label>Other Occasion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>