sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <description>LEM-1066: Quote Line Page Layout updates</description>
    <formula>SBQQ__ProductOption__r.Package__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package</label>
    <type>Text</type>
</CustomField>