sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Package_Code__c.field-meta.xml
<CustomField>
    <fullName>Package_Code__c</fullName>
    <description>This field is created for CLM to show the Package code on the QuoteLine</description>
    <formula>SBQQ__ProductOption__r.SBQQ__ConfiguredSKU__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Code</label>
    <type>Text</type>
</CustomField>