sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Package_Product__c.field-meta.xml
<CustomField>
    <fullName>Package_Product__c</fullName>
    <description>LEM-4103: To be used in alcohol product rules</description>
    <formula>Package__c &amp; &apos;: &apos; &amp;  SBQQ__ProductOption__r.SBQQ__ProductName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package/Product</label>
    <type>Text</type>
</CustomField>