sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Package_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Package_Product_Code__c</fullName>
    <description>This field is critical for CLM Integration, reach out to Tina.</description>
    <formula>IF(OR(TEXT(SBQQ__Quote__r.SBQQ__Type__c) = &apos;Quote&apos;,

AND(TEXT(SBQQ__Quote__r.SBQQ__Type__c) = &apos;Amendment&apos;, SBQQ__Quantity__c &gt; 0,ISBLANK(SBQQ__Source__c),SBQQ__UpgradedSubscription__c =&quot;&quot;),

AND( TEXT(SBQQ__Quote__r.SBQQ__Type__c) = &apos;Amendment&apos;, SBQQ__Quantity__c &gt; 0,   NOT(ISBLANK(SBQQ__Source__c)) , OR( Requested_Commission__c !=  SBQQ__Source__r.Requested_Commission__c ,SBQQ__Bundle__c=true,  SBQQ__SpecialPrice__c !=  SBQQ__Source__r.SBQQ__SpecialPrice__c) )),Package_Code__c+&quot;-&quot;+SBQQ__ProductCode__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is critical for CLM Integration, reach out to Tina.</inlineHelpText>
    <label>CLM Package-Product Code</label>
    <type>Text</type>
</CustomField>