sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Package_Product_Existing__c.field-meta.xml
<CustomField>
    <fullName>Package_Product_Existing__c</fullName>
    <description>LEM-13535: This field is used to filter out existing lines for by passing amendment validations.</description>
    <formula>IF(
            SBQQ__Existing__c,
            &quot;&quot;,
            Package__c &amp; &apos;: &apos; &amp; SBQQ__ProductOption__r.SBQQ__ProductName__c

        )</formula>
    <label>Package/Product Existing</label>
    <type>Text</type>
</CustomField>