sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Package_with_Existing__c.field-meta.xml
<CustomField>
    <fullName>Package_with_Existing__c</fullName>
    <formula>Package__c &amp; &apos;-&apos; &amp;
        IF(
            SBQQ__Existing__c,
            &quot;Existing&quot;,
            &quot;New&quot;
        )</formula>
    <label>Package with Existing</label>
    <type>Text</type>
</CustomField>