sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Paid_Media_Spend_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Paid_Media_Spend_Commitment__c</fullName>
    <description>LEM-2143: Drive Promo Attributes</description>
    <label>Paid Media Spend Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>