sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Parent_Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Package_Id__c</fullName>
    <description>LEM-13822 Used in QCP for Stamping other field Values from Selected Commission Rate
    Supports price rule to retrieve package-specific pricing from the Commission Rates object</description>
    <formula>CASESAFEID(SBQQ__ProductOption__r.SBQQ__ConfiguredSKU__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Parent Package Id</label>
    <type>Text</type>
</CustomField>