sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Pizza_Hot_Bags__c.field-meta.xml
<CustomField>
    <fullName>Pizza_Hot_Bags__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-15212:Drive Fields for SMB</description>
    <label>Pizza Hot Bags</label>
    <type>Checkbox</type>
</CustomField>