sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>LEM-1528 - Identifies Platform from Product2</description>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform</valueSetName>
    </valueSet>
</CustomField>