sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Press_Release_Mentions_by_Mx__c.field-meta.xml
<CustomField>
    <fullName>Press_Release_Mentions_by_Mx__c</fullName>
    <description>LEM-13256 - DPEI Quote Line Attributes</description>
    <label>Press Release Mentions by Mx</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Maybe</valueSetName>
    </valueSet>
</CustomField>