sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Audit__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Audit__c</fullName>
    <inlineHelpText>LEM-13822 Source of the pricing/commission rate</inlineHelpText>
    <label>Pricing Audit</label>
    <length>200</length>
    <type>Text</type>
</CustomField>