sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Search_Complete__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Search_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13822 - Indicates if the QCP or Price Rule logic to find commission rate record is complete for this line</description>
    <inlineHelpText>Indicates if the QCP or Price Rule logic to find commission rate record is complete for this line</inlineHelpText>
    <label>Pricing Search Complete</label>
    <type>Checkbox</type>
</CustomField>