sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricing_Type</valueSetName>
    </valueSet>
</CustomField>