sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Prior_Approved_Commission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Prior_Approved_Commission_Fee__c</fullName>
    <description>LEM-22670: It is used capture Prior Approved Requested Fee by Deal Desk.</description>
    <label>Prior Approved Commission Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>