sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Prior_Approved_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Prior_Approved_Commission_Percent__c</fullName>
    <description>LEM-22670: It is used capture Prior Approved Requested Commission by Deal Desk.</description>
    <label>Prior Approved Commission Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>