sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Family_with_Existing__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_with_Existing__c</fullName>
    <formula>IF(SBQQ__Existing__c,&apos; &apos;,SBQQ__ProductFamily__c)</formula>
    <label>Product Family with Existing</label>
    <type>Text</type>
</CustomField>