sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Name_with_Existing__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_with_Existing__c</fullName>
    <formula>IF(SBQQ__Existing__c,&quot;&quot;,SBQQ__ProductName__c)</formula>
    <label>Product Name with Existing</label>
    <type>Text</type>
</CustomField>