sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Promotion_Quote_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Quote_Line_Count__c</fullName>
    <description>LEM - 2014: Used for &apos;Check for Templatized Contract Generation Path&apos; Product Validation Rule</description>
    <formula>IF(SBQQ__ProductFamily__c = &apos;Marketplace Promotion&apos;


&amp;&amp; ISBLANK(SBQQ__UpgradedSubscription__c),


1, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Quote Line Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>