sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Promotional_Period__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Period__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <label>Promotional Period</label>
    <type>Date</type>
</CustomField>