sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Promotional_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Pricing__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <label>Promotional Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>