sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/QuoteLine_Migration_External_ID__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine_Migration_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>LEM-2258: Migrated record fields for Quote and Quote Line</description>
    <externalId>true</externalId>
    <label>Quote Line Migration External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>