sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rate_Change__c.field-meta.xml
<CustomField>
<fullName>Rate_Change__c</fullName>
<description>LEM-14968: Determines if requested fee, requested commission or both are updated on Amendment</description>
<formula>IF(Type__c = &quot;Amended&quot;,
IF(
AND(SBQQ__Source__r.SBQQ__SpecialPrice__c &lt;&gt; SBQQ__SpecialPrice__c,
OR(
SBQQ__Source__r.Requested_Commission__c &lt;&gt; Requested_Commission__c,
AND(ISBLANK(SBQQ__Source__r.Requested_Commission__c), NOT(ISBLANK(Requested_Commission__c))),
AND(ISBLANK(Requested_Commission__c), NOT(ISBLANK(SBQQ__Source__r.Requested_Commission__c)))
)
),
&quot;Commission + Fee&quot;,
IF(SBQQ__Source__r.SBQQ__SpecialPrice__c &lt;&gt; SBQQ__SpecialPrice__c,
&quot;Fee&quot;,
IF(OR(
SBQQ__Source__r.Requested_Commission__c &lt;&gt; Requested_Commission__c,
AND(ISBLANK(SBQQ__Source__r.Requested_Commission__c), NOT(ISBLANK(Requested_Commission__c))),
AND(ISBLANK(Requested_Commission__c), NOT(ISBLANK(SBQQ__Source__r.Requested_Commission__c)))
),
&quot;Commission&quot;,
&quot;No&quot;
)
)
),
&quot;No&quot;
)</formula>
<label>Rate Change?</label>
<type>Text</type>
</CustomField>