sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Amount__c</fullName>
    <description>LEM-13482: It is used to capture the Rebate Amount for a corresponding product in the magic wand (drawer) on the QLE screen.</description>
    <label>Rebate Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>