sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requested_Below_Original_All__c.field-meta.xml
<CustomField>
    <fullName>Requested_Below_Original_All__c</fullName>
    <description>LEM-13986: It checks original commission is greater than requested commission.</description>
    <formula>IF(
    AND(
        SBQQ__Existing__c = false,
        AND(
          Package__c != $Label.SmallOrderFulfillment_Package,
          Package__c != $Label.LargeOrderFulfillment_Package
        ),
        OR(
            (
                Requested_Commission__c &lt; Original_Commission__c &amp;&amp;
                Requested_Commission__c &gt;= 0.01 &amp;&amp;
                ISBLANK(TEXT(Prior_Approved_Commission_Percent__c))
            ),
            (
                Requested_Commission__c &lt; Prior_Approved_Commission_Percent__c &amp;&amp;
                Requested_Commission__c &gt;= 0.01 &amp;&amp;
                !ISBLANK(TEXT(Prior_Approved_Commission_Percent__c)) &amp;&amp;
                Requested_Commission__c != Prior_Approved_Commission_Percent__c
            )
        )
    ),
    1,2
)</formula>
    <label>Requested Below Original All</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>