sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requested_Commission_Over_Max_Commission__c.field-meta.xml
<CustomField>
    <fullName>Requested_Commission_Over_Max_Commission__c</fullName>
    <description>LEM-13626: This field is used to check the value for Requested Commission over Ceiling Rate.</description>
    <formula>IF(( Requested_Commission__c &gt; Ceiling_Rate__c ) &amp;&amp; Ceiling_Rate__c &gt;= 0.01, 1, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Commission Over Max Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>