sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requested_Greater_Than_Deal_Desk_Comm__c.field-meta.xml
<CustomField>
    <fullName>Requested_Greater_Than_Deal_Desk_Comm__c</fullName>
    <description>LEM-13986: It is updated to include scenario where Manager Threshold is populated but there is no deal desk threshold.</description>
    <formula>IF(
    AND(
        SBQQ__Existing__c = false,
        OR(
            (
                (Requested_Commission__c &gt; Deal_Desk_Commission_Threshold__c) &amp;&amp; 
                Deal_Desk_Commission_Threshold__c &gt;= 0.01 &amp;&amp; 
                Requested_Commission__c &gt;= 0.01
            ),
            (Deal_Desk_Commission_Threshold__c &lt;= 0)
        )),
    1,2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Greater Than Deal Desk Comm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>