sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requested_Less_Than_Manager_Commission__c.field-meta.xml
<CustomField>
    <fullName>Requested_Less_Than_Manager_Commission__c</fullName>
    <description>LEM-13986: This field determines if commission is less than the threshold set.</description>
    <formula>IF(
    AND(
        SBQQ__Existing__c = false,
        Requested_Less_Deal_Desk_Commission__c &lt;&gt; 1, 
        ISPICKVAL(CurrencyIsoCode, &quot;CAD&quot;),
        OR(
            (
                (Requested_Commission__c &lt;= User_Manager_Commission_Threshold__c) &amp;&amp; 
                (User_Manager_Commission_Threshold__c &gt;= 0.01 &amp;&amp; Requested_Commission__c &gt;= 0.01)
            ),
            (
                (SBQQ__SpecialPrice__c &lt;= User_Manager_Fee_Threshold__c) &amp;&amp; 
                (User_Manager_Fee_Threshold__c &gt;= 0.01 &amp;&amp; SBQQ__SpecialPrice__c &gt;= 0.01)
            )
        )
    ),
    1, 
    IF(
        AND(
            SBQQ__Existing__c = false,
            NOT(ISPICKVAL(CurrencyIsoCode, &quot;CAD&quot;)),
            OR(
                (
                    (Requested_Commission__c &lt;= User_Manager_Commission_Threshold__c) &amp;&amp; 
                    (User_Manager_Commission_Threshold__c &gt;= 0.01 &amp;&amp; Requested_Commission__c &gt;= 0.01)
                ),
                (
                    (SBQQ__SpecialPrice__c &lt;= User_Manager_Fee_Threshold__c) &amp;&amp; 
                    (User_Manager_Fee_Threshold__c &gt;= 0.01 &amp;&amp; SBQQ__SpecialPrice__c &gt;= 0.01)
                )
            )
        ), 
        1, 2
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Less Than Manager Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>