sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requested_vs_Original_Fee_Comm__c.field-meta.xml
<CustomField>
    <fullName>Requested_vs_Original_Fee_Comm__c</fullName>
    <description>LEM-13438: It sets the value of special price and requested commission based on original price and original commission,</description>
    <formula>IF(
    AND(
        SBQQ__Existing__c = false,
        SBQQ__SpecialPrice__c != SBQQ__OriginalPrice__c, 
        SBQQ__SpecialPrice__c &gt; 0.001), 
    1,
    IF( 
        AND( 
            SBQQ__Existing__c = false,
            Requested_Commission__c != Original_Commission__c, 
            Requested_Commission__c &gt; 0.001), 
        2, 0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested vs Original Fee/Comm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>