sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Required_Spend_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Required_Spend_Threshold__c</fullName>
    <description>LEM-13634 - Store Rewards Quote Line Attributes</description>
    <label>Required Spend Threshold</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>