sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <description>LEM-13634 - Store Rewards Quote Line Attributes</description>
    <label>$ Reward</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>