sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>Reward_Type__c</fullName>
    <description>LEM-13634 - Store Rewards Quote Line Attributes</description>
    <label>Reward Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reward_Type</valueSetName>
    </valueSet>
</CustomField>