sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Right_of_First_Refusal__c.field-meta.xml
<CustomField>
    <fullName>Right_of_First_Refusal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-15212:Drive Fields for SMB</description>
    <label>Right of First Refusal</label>
    <type>Checkbox</type>
</CustomField>