sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <description>Created as part of LEM-6483</description>
    <label>Setup Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>